# miako-backend

./: .env.example  Dockerfile  docker-compose.yaml  entrypoint.sh  main.py  pyproject.toml
_legacy_flow_main/: flows.py
core/: app_logger.py  config.py  logging.py  security.py
databases/: database.py
llm_workflow/memory/knowledge_base/: knowledge.py
llm_workflow/prompts/data_sources/: intent.yaml  prompts.yaml
llm_workflow/workflows/: base.py  flows.py  single_user_simulator_chatbot.py
llm_workflow/workflows/steps/: intent_step.py  language_step.py
miako_workflow/: miako_router.py
miako_workflow/config_files/: config.py  locking.py
miako_workflow/llm/: groq_llm.py
miako_workflow/memory/knowledge_base/: knowledge.py
miako_workflow/memory/long_term_memory/: memory_store.py  vector_connection.py
miako_workflow/memory/short_term_memory/: _fake_memory_testing.py  message_cache.py
miako_workflow/prompts/: prompt_library.py
miako_workflow/prompts/data_sources/: intent.yaml  language.yaml  prompts.yaml
miako_workflow/workflows/: _executor_protocol_test.py  base.py  concurrent_simulator_chatbot.py  flows.py  single_user_simulator_chatbot.py
miako_workflow/workflows/steps/: decision_step.py  intent_step.py  language_step.py
migrations/: env.py
migrations/versions/: 79ac172400ab_alembic_db_init_with_tzone_awareness.py  ce44c81b6e2c_add_user_and_conversation_tables.py
routers/: llm_workflow_router.py  router_v2.py
