[project]
name = "miako-app-mvp"
version = "0.1.0"
description = """**Mirai Aiko** (shoruv tened to **Miako** for the domain and branding)
 – MVP demo of the AI assistant app. Private build for early testing with core features only."""
requires-python = ">=3.13, <3.14"
dependencies = [
    "alembic>=1.18.1",
    "asyncpg>=0.31.0",
    "azure-ai-projects>=2.0.1",
    "cachetools>=6.2.4",
    "crewai>=1.6.1",
    "fastapi>=0.135.2",
    "groq>=1.0.0",
    "llama-index>=0.14.13",
    "llama-index-embeddings-cohere>=0.6.1",
    "llama-index-vector-stores-milvus>=0.9.6",
    "loguru>=0.7.3",
    "mypy>=1.19.1",
    "passlib[argon2]>=1.7.4",
    "pytest-asyncio>=1.3.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.21",
    "sqlmodel>=0.0.31",
    "uvicorn>=0.42.0",
]
